--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-on: [push, pull_request, workflow_dispatch]
+on: [ push, pull_request, workflow_dispatch ]
 
 name: CI
 
@@ -101,6 +101,11 @@ jobs:
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - name: Build
         run: cd sillirc & ../trunk build
+      - name: Upload web build
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: sillirc-wasm32-unknown-unknown
+          path: sillirc/dist
 
   build:
     runs-on: ${{ matrix.os }}
@@ -108,38 +113,47 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - os: macos-latest
-          TARGET: aarch64-apple-darwin
+          - os: macos-latest
+            TARGET: aarch64-apple-darwin
 
-        - os: macos-latest
-          TARGET: x86_64-apple-darwin
+          - os: macos-latest
+            TARGET: x86_64-apple-darwin
 
-        - os: ubuntu-latest
-          TARGET: arm-unknown-linux-musleabihf
+          - os: ubuntu-latest
+            TARGET: arm-unknown-linux-musleabihf
 
-        - os: ubuntu-latest
-          TARGET: armv7-unknown-linux-musleabihf
+          - os: ubuntu-latest
+            TARGET: armv7-unknown-linux-musleabihf
 
-        - os: ubuntu-latest
-          TARGET: x86_64-unknown-linux-musl
+          - os: ubuntu-latest
+            TARGET: x86_64-unknown-linux-musl
 
-        - os: windows-latest
-          TARGET: x86_64-pc-windows-msvc
-          EXTENSION: .exe
+          - os: windows-latest
+            TARGET: x86_64-pc-windows-msvc
+            EXTENSION: .exe
 
     steps:
-    - name: Building ${{ matrix.TARGET }}
-      run: echo "${{ matrix.TARGET }}"
+      - name: Building ${{ matrix.TARGET }}
+        run: echo "${{ matrix.TARGET }}"
 
-    - uses: actions/checkout@master
-    - uses: actions-rs/toolchain@v1.0.1
-      with:
-        toolchain: stable
-        target: ${{ matrix.TARGET }}
-        override: true
+      - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@v1.0.1
+        with:
+          toolchain: stable
+          target: ${{ matrix.TARGET }}
+          override: true
 
-    - uses: actions-rs/cargo@v1
-      with:
-        use-cross: true
-        command: build
-        args: --verbose --release --target=${{ matrix.TARGET }}
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --verbose --release --target=${{ matrix.TARGET }}
+
+      - name: Remove unnecessary build files for upload
+        run: rm -rf target/${{ matrix.TARGET }}/release/.fingerprint target/${{ matrix.TARGET }}/release/build target/${{ matrix.TARGET }}/release/deps target/${{ matrix.TARGET }}/release/examples target/${{ matrix.TARGET }}/release/incremental target/${{ matrix.TARGET }}/release/.cargo-lock target/${{ matrix.TARGET }}/release/*.d target/${{ matrix.TARGET }}/release/*.rlib
+
+      - name: Upload all builds
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: sillirc-${{ matrix.TARGET }}
+          path: target/${{ matrix.TARGET }}/release
