--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Download and install Trunk binary
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - name: Build
-        run: cd sillirc & ../trunk build
+        run: cd sillirc && ../trunk build
       - name: Upload web build
         uses: actions/upload-artifact@v4.6.2
         with:
