--- a/sillirc/Cargo.toml
+++ b/sillirc/Cargo.toml
@@ -20,16 +20,17 @@ eframe = { version = "0.33.0", default-features = false, features = [
     "wayland",
     "x11",
 ] }
-log = "0.4.27"
+log = "0.4.28"
 
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4.50"
-web-sys = "0.3.70"
+wasm-bindgen-futures = "0.4.54"
+web-sys = "0.3.81"
 
 [lints]
 workspace = true
