--- a/sillirc-mini/Cargo.toml
+++ b/sillirc-mini/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.47.1", features = ["full"] }
-tokio-tungstenite = "0.28.0"
-tungstenite = "0.28.0"
-futures = "0.3.31"
+serde_json = "1.0.145"
+
+sillirc-lib = { path = "../sillirc-lib" }
 
 [lints]
 workspace = true
