--- a/sillirc/Cargo.toml
+++ b/sillirc/Cargo.toml
@@ -23,6 +23,7 @@ eframe = { version = "0.33.0", default-features = false, features = [
 log = "0.4.28"
 
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 tokio = { version = "1.47.1", features = ["full"] }
 futures = "0.3.31"
 sillirc-lib = { path = "../sillirc-lib" }
