--- a/sillirc-lib/Cargo.toml
+++ b/sillirc-lib/Cargo.toml
@@ -4,13 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
 tokio-tungstenite = "0.28.0"
 tungstenite = "0.28.0"
 futures = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
+
+#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+#
+#
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
+#uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
+#wasm-bindgen-futures = "0.4.54"
+#web-sys = "0.3.81"
 
 [lints]
 workspace = true
