--- a/sillirc/Cargo.toml
+++ b/sillirc/Cargo.toml
@@ -21,19 +21,18 @@ eframe = { version = "0.33.0", default-features = false, features = [
     "x11",
 ] }
 log = "0.4.28"
-
+tokio = { version = "1.48.0", features = ["full"] }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.47.1", features = ["full"] }
-futures = "0.3.31"
 sillirc-lib = { path = "../sillirc-lib" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.8"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4.54"
-web-sys = "0.3.81"
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
+#getrandom = { version = "0.3.4", features = ["wasm_js"] }
+#tokio-tungstenite-wasm = "0.6.0"
+#wasm-bindgen-futures = "0.4.54"
+#web-sys = "0.3.81"
 
 [lints]
 workspace = true
