--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -153,9 +153,9 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }}
         run: rm -rf target/${{ matrix.TARGET }}/release/.fingerprint target/${{ matrix.TARGET }}/release/build target/${{ matrix.TARGET }}/release/deps target/${{ matrix.TARGET }}/release/examples target/${{ matrix.TARGET }}/release/incremental target/${{ matrix.TARGET }}/release/.cargo-lock target/${{ matrix.TARGET }}/release/*.d target/${{ matrix.TARGET }}/release/*.rlib
 
-      - name: Remove unnecessary build files for upload
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: Remove-Item -Recurse -Force target/${{ matrix.TARGET }}/release/.fingerprint, target/${{ matrix.TARGET }}/release/build, target/${{ matrix.TARGET }}/release/deps, target/${{ matrix.TARGET }}/release/examples, target/${{ matrix.TARGET }}/release/incremental, target/${{ matrix.TARGET }}/release/.cargo-lock, target/${{ matrix.TARGET }}/release/*.d, target/${{ matrix.TARGET }}/release/*.rlib
+#      - name: Remove unnecessary build files for upload
+#        if: ${{ matrix.os == 'windows-latest' }}
+#        run: Remove-Item -Recurse -Force target/${{ matrix.TARGET }}/release/.fingerprint, target/${{ matrix.TARGET }}/release/build, target/${{ matrix.TARGET }}/release/deps, target/${{ matrix.TARGET }}/release/examples, target/${{ matrix.TARGET }}/release/incremental, target/${{ matrix.TARGET }}/release/.cargo-lock, target/${{ matrix.TARGET }}/release/*.d, target/${{ matrix.TARGET }}/release/*.rlib
 
       - name: Upload all builds
         uses: actions/upload-artifact@v4.6.2
