--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -120,16 +120,16 @@ jobs:
             TARGET: x86_64-apple-darwin
 
           - os: ubuntu-latest
-            TARGET: arm-unknown-linux-musleabihf
+            TARGET: arm-unknown-linux-gnu
 
           - os: ubuntu-latest
-            TARGET: armv7-unknown-linux-musleabihf
+            TARGET: armv7-unknown-linux-gnu
 
           - os: ubuntu-latest
-            TARGET: x86_64-unknown-linux-musl
+            TARGET: x86_64-unknown-linux-gnu
 
           - os: windows-latest
-            TARGET: x86_64-pc-windows-msvc
+            TARGET: x86_64-pc-windows-gnu
             EXTENSION: .exe
 
     steps:
@@ -148,14 +148,6 @@ jobs:
           use-cross: true
           command: build
           args: --verbose --release --target=${{ matrix.TARGET }}
-
-      - name: Remove unnecessary build files for upload
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: rm -rf target/${{ matrix.TARGET }}/release/.fingerprint target/${{ matrix.TARGET }}/release/build target/${{ matrix.TARGET }}/release/deps target/${{ matrix.TARGET }}/release/examples target/${{ matrix.TARGET }}/release/incremental target/${{ matrix.TARGET }}/release/.cargo-lock target/${{ matrix.TARGET }}/release/*.d target/${{ matrix.TARGET }}/release/*.rlib
-
-#      - name: Remove unnecessary build files for upload
-#        if: ${{ matrix.os == 'windows-latest' }}
-#        run: Remove-Item -Recurse -Force target/${{ matrix.TARGET }}/release/.fingerprint, target/${{ matrix.TARGET }}/release/build, target/${{ matrix.TARGET }}/release/deps, target/${{ matrix.TARGET }}/release/examples, target/${{ matrix.TARGET }}/release/incremental, target/${{ matrix.TARGET }}/release/.cargo-lock, target/${{ matrix.TARGET }}/release/*.d, target/${{ matrix.TARGET }}/release/*.rlib
 
       - name: Upload all builds
         uses: actions/upload-artifact@v4.6.2
