--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -120,10 +120,10 @@ jobs:
             TARGET: x86_64-apple-darwin
 
           - os: ubuntu-latest
-            TARGET: arm-unknown-linux-gnu
+            TARGET: arm-unknown-linux-gnueabi
 
           - os: ubuntu-latest
-            TARGET: armv7-unknown-linux-gnu
+            TARGET: armv7-unknown-linux-gnueabi
 
           - os: ubuntu-latest
             TARGET: x86_64-unknown-linux-gnu
@@ -145,7 +145,6 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
-          use-cross: true
           command: build
           args: --verbose --release --target=${{ matrix.TARGET }}
 
