--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -148,6 +148,14 @@ jobs:
           command: build
           args: --verbose --release --target=${{ matrix.TARGET }}
 
+      - name: Remove unnecessary build files for upload
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: rm -rf target/${{ matrix.TARGET }}/release/.fingerprint target/${{ matrix.TARGET }}/release/build target/${{ matrix.TARGET }}/release/deps target/${{ matrix.TARGET }}/release/examples target/${{ matrix.TARGET }}/release/incremental target/${{ matrix.TARGET }}/release/.cargo-lock target/${{ matrix.TARGET }}/release/*.d target/${{ matrix.TARGET }}/release/*.rlib
+
+      - name: Remove unnecessary build files for upload
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: Remove-Item -Recurse -Force target/${{ matrix.TARGET }}/release/.fingerprint, target/${{ matrix.TARGET }}/release/build, target/${{ matrix.TARGET }}/release/deps, target/${{ matrix.TARGET }}/release/examples, target/${{ matrix.TARGET }}/release/incremental, target/${{ matrix.TARGET }}/release/.cargo-lock, target/${{ matrix.TARGET }}/release/*.d, target/${{ matrix.TARGET }}/release/*.rlib
+
       - name: Upload all builds
         uses: actions/upload-artifact@v4.6.2
         with:
