--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -119,11 +119,11 @@ jobs:
           - os: macos-latest
             TARGET: x86_64-apple-darwin
 
-          - os: ubuntu-latest
-            TARGET: arm-unknown-linux-gnueabi
-
-          - os: ubuntu-latest
-            TARGET: armv7-unknown-linux-gnueabi
+#          - os: ubuntu-latest
+#            TARGET: arm-unknown-linux-gnueabi
+#
+#          - os: ubuntu-latest
+#            TARGET: armv7-unknown-linux-gnueabi
 
           - os: ubuntu-latest
             TARGET: x86_64-unknown-linux-gnu
