--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -126,7 +126,7 @@ jobs:
 #            TARGET: armv7-unknown-linux-musleabi
 
           - os: ubuntu-latest
-            TARGET: x86_64-unknown-linux-musl
+            TARGET: x86_64-unknown-linux-gnu
 
           - os: windows-latest
             TARGET: x86_64-pc-windows-gnu
@@ -135,6 +135,12 @@ jobs:
     steps:
       - name: Building ${{ matrix.TARGET }}
         run: echo "${{ matrix.TARGET }}"
+
+      - name: Install Linux deps
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: sudo apt-get update && sudo apt-get install -y \
+          libwayland-dev libxkbcommon-dev libxcb-render0-dev \
+          libxcb-shape0-dev libxcb-xfixes0-dev
 
       - uses: actions/checkout@master
       - uses: actions-rs/toolchain@v1.0.1
