--- a/sillirc-mini/Cargo.toml
+++ b/sillirc-mini/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
-serde_json = "1.0.145"
-
 sillirc-lib = { path = "../sillirc-lib" }
+colored = "3.0.0"
 
 [lints]
 workspace = true
